--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -1,4 +1,4 @@
-name: Test API (Manual Installation)
+name: Test API (Fixing manual installation)
 on: [push]
 
 jobs:
@@ -11,12 +11,18 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 18.x # O la versión que necesites
 
-      - name: Install build tools (if needed)
-        run: sudo apt-get update && sudo apt-get install -y build-essential
+      - name: Install build tools and libcurl dev package
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential libcurl4-openssl-dev
 
       - name: Install Inso CLI
-        run: npm install -g insomnia-inso --build-from-source
-        env:
-          npm_config_build_from_source: true
+        run: npm install -g insomnia-inso
+
+      - name: Lint API spec
+        run: inso lint spec "My API Spec" --ci
+
+      - name: Run API tests
+        run: inso run test "My Test Suite" --ci
