--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -19,7 +19,7 @@ jobs:
           sudo apt-get install -y build-essential libcurl4-openssl-dev
 
       - name: Install Inso CLI
-        run: npm install -g insomnia-inso
+        run: npm install -g insomnia-inso ts-node
 
       - name: Instalar dependencias del proyecto
         run: npm ci
