--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x # O la versión que necesites
+          node-version: 20
 
       - name: Install build tools and libcurl dev package
         run: |
@@ -19,7 +19,7 @@ jobs:
           sudo apt-get install -y build-essential libcurl4-openssl-dev
 
       - name: Install Inso CLI
-        run: npm install -g insomnia-inso ts-node @stoplight/spectral-cli
+        run: npm install -g insomnia-inso@3.8.1 ts-node @stoplight/spectral-cli
 
       - name: Instalar dependencias del proyecto
         run: npm ci
@@ -33,7 +33,5 @@ jobs:
         run: spectral lint openapi.yaml
 
       # 5️⃣  Exportar colección Insomnia
-      - name: Exportar colección Insomnia
-        run: |
-          mkdir -p .insomnia
-          inso export spec openapi.yaml --output .insomnia/api.json
+      - name: Exportar spec desde Insomnia data
+        run: inso export spec "Mi API" --output openapi-ci.yaml
